[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Menu/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menu/PIXIE.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Click.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Menu/Menu_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/Menu_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu/Menu_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu/Menu_3.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Menu.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprites/Menu/Menu_5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Menu/Menu_6.png" type="Texture" id=10]
[ext_resource path="res://Title.gd" type="Script" id=11]
[ext_resource path="res://scene_manager.tscn" type="PackedScene" id=12]

[node name="title screen" type="Node2D"]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.250195, 0.254495 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 184.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 70.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 174.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 60.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 73.0
margin_top = 76.0
margin_right = 106.0
margin_bottom = 135.0
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 33.0
margin_bottom = 17.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 33.0
margin_bottom = 38.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 33.0
margin_bottom = 59.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="scene_manager" parent="." instance=ExtResource( 12 )]
Scene = "res://Intro.tscn"
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
